# agentic-kyc-control-evals

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
data/: scenarios.jsonl
docs/: research_note.md
kyc_agent_evals/: __init__.py  agent_interface.py  evaluator.py  models.py  runner.py  sample_agents.py
kyc_agent_evals/adapters/: __init__.py  anthropic_agent.py  openai_agent.py  prompt_builder.py
outputs/: README.md
tests/: test_evaluator.py  test_prompt_builder.py
