[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-kyc-control-evals"
version = "0.1.0"
description = "Evaluation harness for testing AI agents in high-risk KYC and AML control-review scenarios."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kay Johnson" }
]
dependencies = [
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
kyc-evals = "kyc_agent_evals.runner:app"

[tool.setuptools.packages.find]
include = ["kyc_agent_evals*"]
exclude = ["data*", "docs*", "outputs*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
